add modal window

--- a/index.html
+++ b/index.html
@@ -105,6 +105,52 @@
             <button class="button button-primary">Смотреть квартиры на этаже</button>
         </div>
     </main>
+    <div class="modal">
+        <div class="modal-dialog">
+            <button class="modal-close-button">
+                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2 2L26 26" stroke="#3596F5" stroke-width="3" />
+                    <path d="M26 2L2 26" stroke="#3596F5" stroke-width="3" />
+                </svg>
+            </button>
+            <div class="modal-image">
+                <h3 class="modal-title">Этаж <span class="modal-counter">07</span></h3>
+                <img src="img/flor-png.png" alt="">
+            </div>
+            <div class="modal-info">
+                <h3 class="modal-title">Выберите квартиру <span class="modal-counter">07</span></h3>
+                <ul class="flat-list">
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 64,5 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 41, 1 комн. 38,9 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 42, 1 комн. 35,9 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 43, 2 комн. 58.2 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 44, 1 комн. 35.8 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 45, 1 комн. 35.8 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 58.2 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                </ul>
+                <p class="modal-alert">
+                    Квартиры, отмеченные серым,<br> уже выкуплены
+                </p>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
